update angular-cli and css

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,14 @@
-<h1>
-  {{title}}
-</h1>
+<div id="my-app" class="container">
+  <nav class="navbar navbar-default">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="#">
+          <img alt="Brand" src="https://scotch.io/wp-content/themes/scotchpress/img/logo-large.png">
+        </a>
+      </div>
+    </div>
+  </nav>
+
+  <app-todo-list></app-todo-list>
+
+</div>
