add procfile for heroku deployment

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
         <a class="navbar-brand" href="#">
           <img alt="Brand" src="https://scotch.io/wp-content/themes/scotchpress/img/logo-large.png">
         </a>
+        One of those apps we call to do list
       </div>
     </div>
   </nav>
